--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  equatable: ^0.2.6
+  bloc: ^0.14.1
+  flutter_bloc: ^0.15.0
+  meta: ^1.1.6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
