--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   bloc: ^0.14.1
   flutter_bloc: ^0.15.0
   meta: ^1.1.6
+  font_awesome_flutter: ^8.4.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
